# -AI-Stock-Analysis-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  PRD.md  README.md  README.md.hf  debug_agent.py  main.py  pyproject.toml  requirements.txt  test_workflow.py
docs/superpowers/plans/: 2026-05-15-ui-cleanup.md  2026-05-15-ui-refactor-plan.md  TODO.md
docs/superpowers/specs/: 2026-05-15-ui-refactor-design.md
src/agents/: bear_agent.py  bull_agent.py  cio_agent.py
src/orchestration/: backtest_engine.py  schemas.py  workflow.py
src/tools/: agent_tools.py  chart_generator.py  math_lab.py  openbb_fetcher.py
src/ui/: app.py
tests/: run_mini_backtest.py  test_agents.py  test_data_fetchers.py  test_historical_integrity.py  test_math_lab.py  test_schemas.py  test_workflow_logic.py
